[gd_scene load_steps=13 format=2]

[ext_resource path="res://input/input_text.gd" type="Script" id=1]
[ext_resource path="res://fonts/plex_mono_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=4]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=5]
[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://GameInfo.tscn" type="PackedScene" id=8]
[ext_resource path="res://SidePanel.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 4 )

[node name="RoomManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="ShedRoom" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 2032.0
margin_top = -419.0
margin_right = 2382.0
margin_bottom = -207.0
room_name = "a Shed"
room_description = "a storage shed behind a large building that seems to be an inn. There's a door to the inn and storage crates to the west."

[node name="BackOfInn" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 1644.0
margin_top = -507.0
margin_right = 1994.0
margin_bottom = -145.0
room_name = "the back of the inn"
room_description = "this is the back entrance of the inn. The inn keeper must be storing the crates outside. There seem to be a door to the north that leads to a new location. "

[node name="InnKitchen" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 1646.0
margin_top = -935.0
margin_right = 1996.0
margin_bottom = -553.0
room_name = "the inn's kitchen"
room_description = "Aaaah..!! sssshshhhh you're in the kitchen of the inn. However, the cook is not seem to be found anywere. Tread carefully. Looks like there's another door to the north leading to the main inn. There's a door to the south as well but uhhhh,  it leads back to where you came from"

[node name="Inn" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 1649.0
margin_top = -1348.0
margin_right = 1999.0
margin_bottom = -966.0
room_name = "the inn"
room_description = "This is the main area of the inn. There seem to be table and drinks everywhere. There's a door to the south that leads back to the kitchen and to the west lies a door that will lead you outside the village."

[node name="InnDoor" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 1244.0
margin_top = -1336.0
margin_right = 1594.0
margin_bottom = -954.0
room_name = "the inn door"
room_description = "this is the main entrance to the inn. The board outside says \"Fluffy Cat Inn\""

[node name="VillageSquare" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 827.0
margin_top = -1339.0
margin_right = 1177.0
margin_bottom = -957.0
room_name = "the village square"
room_description = "inn door to the east and Field to the west"

[node name="Field" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 392.0
margin_top = -1332.0
margin_right = 742.0
margin_bottom = -964.0
room_name = "a field"
room_description = "flowers flowers and FUCKING BARLEYYY. Village is back to the west"

[node name="TownsGate" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 837.0
margin_top = -1794.0
margin_right = 1187.0
margin_bottom = -1412.0
room_name = "the towns gate"
room_description = "leads out to the forest in the north. The village is back towards the south"

[node name="Forest" parent="RoomManager" instance=ExtResource( 5 )]
margin_left = 833.0
margin_top = -2241.0
margin_right = 1183.0
margin_bottom = -1859.0
room_name = "a Forest"
room_description = "Congratulations...!! Little Wanker..
You've made it outside the village."

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="margin_container" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 20

[node name="rows" type="VBoxContainer" parent="Background/margin_container/Columns"]
margin_right = 714.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GameInfo" parent="Background/margin_container/Columns/rows" instance=ExtResource( 8 )]
margin_right = 714.0

[node name="input_area" type="PanelContainer" parent="Background/margin_container/Columns/rows"]
margin_top = 500.0
margin_right = 714.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/margin_container/Columns/rows/input_area"]
margin_right = 714.0
margin_bottom = 60.0

[node name="caret" type="Label" parent="Background/margin_container/Columns/rows/input_area/HBoxContainer"]
margin_top = 11.0
margin_right = 51.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="input_text" type="LineEdit" parent="Background/margin_container/Columns/rows/input_area/HBoxContainer"]
margin_left = 55.0
margin_right = 714.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
max_length = 40
script = ExtResource( 1 )

[node name="SidePanel" parent="Background/margin_container/Columns" instance=ExtResource( 9 )]
margin_left = 734.0
rect_min_size = Vector2( 250, 0 )

[connection signal="text_entered" from="Background/margin_container/Columns/rows/input_area/HBoxContainer/input_text" to="." method="_on_input_text_text_entered"]
[connection signal="text_entered" from="Background/margin_container/Columns/rows/input_area/HBoxContainer/input_text" to="Background/margin_container/Columns/rows/input_area/HBoxContainer/input_text" method="_on_input_text_text_entered"]
